# vscode-torizon-templates

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPRECATED.md  GPU.md  README.md  createFromTemplate.ps1  cspell.json  package-lock.json  package.json  templates.json
aspnetBlazor/: Dockerfile  Dockerfile.debug  Program.cs  _Imports.razor  docker-compose.yml
cConsole/: .gitignore  Dockerfile  Dockerfile.debug  Dockerfile.sdk  Makefile
cmakeConsole/: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.debug  Dockerfile.sdk  Makefile
cmakeConsole/.conf/: deps.json  update.json
cmakeConsole/.doc/: README.md
cppConsole/: .gitignore  Dockerfile  Dockerfile.debug  Dockerfile.sdk  Makefile  docker-compose.yml
cppQML/: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.debug  Dockerfile.sdk  __change__.pro  __change__.pro.qtds  cppQML.pro  docker-compose.yml  main.cpp
cppQML/.conf/: deps.json  update.json
cppQML/.conf/qtpp/: .gdbinit
cppQML/.doc/: README.md
cppQML/.qt/QtProject/: QtCreator.db  QtCreator.ini
cppQML/.qt/QtProject/qtcreator/: cmaketools.xml  debuggers.xml  default.qws  devices.xml  profiles.xml  qtversion.xml  toolchains.xml
cppQML/.qt/QtProject/qtcreator/qbs/1.23.0/: qbs.conf
cppQML/.qt/QtProject/qtcreator/qnx/: qnxconfigurations.xml
cppQML/QML/: Scene.ui.qml  main.qml
cppSlint/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.debug  Dockerfile.sdk  docker-compose.yml
cppSlint/.conf/: deps.json  update.json
cppSlint/.doc/: README.md
cppSlint/src/: main.cpp
dart_cli/: Dockerfile  Dockerfile.debug  README.md  docker-compose.yml  pubspec.yaml
dotnet-console/: Dockerfile  Dockerfile.debug  Program.cs  docker-compose.yml  dotnet-console.csproj
dotnetAvalonia/: .gitignore  App.axaml  App.axaml.cs  Dockerfile  Dockerfile.debug  Program.cs  ViewLocator.cs  __change__.csproj  app.manifest  docker-compose.yml  global.json
dotnetAvaloniaFrameBuffer/: .gitignore  App.axaml  App.axaml.cs  Dockerfile  Dockerfile.debug  Program.cs  ViewLocator.cs  __change__.csproj  docker-compose.yml  dotnetAvaloniaFrameBuffer.csproj  global.json
dotnetConsole/: .gitignore  Dockerfile  Dockerfile.debug  Program.cs  __change__.csproj
dotnetSlint/: Dockerfile  Dockerfile.debug  Program.cs  __change__.csproj  docker-compose.yml
dotnetUno/: .gitignore  Dockerfile  Dockerfile.debug  README.md  __change__.sln  docker-compose.yml  dotnetUno.sln
dotnetUno5/: Directory.Build.props  Directory.Packages.props  Dockerfile  Dockerfile.debug  docker-compose.yml
dotnetUno5FrameBuffer/: .gitignore  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  Dockerfile  Dockerfile.debug  docker-compose.yml  global.json  solution-config.props.sample
dotnetUnoFrameBuffer/: .gitignore  .vsconfig  Dockerfile  Dockerfile.debug  UnoSolutionTemplate.net6.csproj  __change__.sln  docker-compose.yml  dotnetUnoFrameBuffer.sln
empty/: docker-compose.yml
gambasForms/: .gitignore  Dockerfile  Dockerfile.debug  docker-compose.yml  torizonPackages.json
genericTemplate/: .gitignore  Dockerfile  docker-compose.yml
go-console/: Dockerfile  Dockerfile.debug  Dockerfile_copy.debug  docker-compose.yml
javaForms/: .gitignore  Dockerfile  Dockerfile.debug  build.xml  docker-compose.yml
monoCsharpForms/: .gitignore  App.config  Dockerfile  Dockerfile.debug  Form1.Designer.cs  Form1.cs  Program.cs  __change__.csproj  __change__.sln  docker-compose.yml  monoCsharpForms.csproj  monoCsharpForms.sln
nextJSTypeScript/: .gitignore  Dockerfile  Dockerfile.debug  docker-compose.yml  next.config.js  package-lock.json  package.json
nodeElectron/: .gitignore  Dockerfile  Dockerfile.debug  docker-compose.yml  index.html  main.js  package-lock.json  package.json  styles.css
nodeJSTypeScript/: .eslintrc.json  .gitignore  Dockerfile  (+4 more)
rustSlint/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.debug  Dockerfile.sdk  docker-compose.yml
rustSlint/.conf/: deps.json  update.json
rustSlint/.doc/: README.md
rustSlint/src/: main.rs
rustSlint/ui/: appwindow.slint
(+278 files in other folders)
