[package]
name = "__change__"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = { version = "1.7.*", features = [ "backend-linuxkms-noseat" ] }

[build-dependencies]
slint-build = { version = "1.7.*" }
